# loudspeaker-tmatrix

./: README.md  loudspeaker_sim.ipynb  loudspeaker_sim.py  loudspeaker_sim_GUI.py  pyproject.toml  ui_loudspeaker_sim.py
configs/: config.yaml  default_loudspeaker.yaml
loudspeaker_tmatrix/: app.py  config.py  core.py  tmatrix.py  utils.py  visualization.py
notebooks/: intro_to_transmission_matrices.ipynb  introduction_to_transmission_matrices.ipynb
