[tool.poetry]
name = "loudspeaker-tmatrix"
version = "0.1.0"
description = ""
authors = ["Nahuel Passano <passano43632@estudiantes.untref.edu.ar>"]
readme = "README.md"
packages = [{include = "loudspeaker_tmatrix"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
numpy = "<2"
matplotlib = "^3.9.2"
streamlit = "^1.40.0"
sympy = "^1.13.3"
ipykernel = "^6.29.5"
pydantic = "^2.9.2"
pyyaml = "^6.0.2"
plotly = "^5.24.1"
nbformat = "^5.10.4"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
